# uni-text

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  uni_text.py
