[build-system]
requires = ["setuptools>=80.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uni-text"
version = "0.2.1"
description = "A Python library for Unicode text processing, including punctuation handling and CJK character detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://github.com/speech2srt/uni-text"
Repository = "https://github.com/speech2srt/uni-text"
Issues = "https://github.com/speech2srt/uni-text/issues"

[tool.setuptools]
package-dir = {"uni_text" = "src"}
packages = ["uni_text"]

